# cursor-api-adapter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
examples/: minisweagent_demo.py  multimodal.py  quickstart.py
src/cursor_api_adapter/: __init__.py  _process.py  client.py  errors.py  images.py  responses.py  stream.py
src/cursor_api_adapter/adapters/: minisweagent.py
tests/: conftest.py  test_adapter_minisweagent.py  test_client.py  test_errors.py  test_images.py  test_integration.py  test_stream_parser.py
tests/fixtures/: stream_assistant.jsonl  stream_init.jsonl  stream_result.jsonl
