[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cursor-api-adapter"
version = "0.1.0"
description = "Pythonic client for the cursor-agent CLI, with a mini-swe-agent adapter."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sergey Bunas", email = "sergey@21st.dev" }]
keywords = ["cursor", "cursor-agent", "llm", "agent", "mini-swe-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
minisweagent = ["mini-swe-agent>=0.3"]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/bunasQ/cursor-api-adapter"
Issues   = "https://github.com/bunasQ/cursor-api-adapter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_api_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
